@@ -3,6 +3,8 @@
 	* util.c: Don't leak a file descriptor in function read_file.
 	* util.c, util.c, dmidecode.c: Let callers pass an offset to function
 	  read_file.
+	* dmidecode.c: Fix reading from SMBIOS 3 dump files using a 64-bit
+	  entry point.
 
 2017-04-10  Jean Delvare  <jdelvare@suse.de>
 
